--- a/sources/index.html
+++ b/sources/index.html
@@ -6,6 +6,6 @@
     <title>Bruno Simon</title>
 </head>
 <body>
-    Folio 2025
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
