:sparkles: Whispers > Add intro and outro

--- a/sources/index.html
+++ b/sources/index.html
@@ -54,6 +54,7 @@
                             - New whispers remove old ones (max 30)<br />
                             - One whisper per user<br />
                             - No slur!<br />
+                            - Placed at the vehicle position<br />
                             - Max 30 characters
                         </p>
                         <form class="js-input-group input-group">
