--- a/sources/index.html
+++ b/sources/index.html
@@ -25,7 +25,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Nunito&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Nunito@400;700&display=block" rel="stylesheet">
     
     <link rel="stylesheet" href="./style/index.styl">
 
@@ -72,7 +72,8 @@
                     </div>
                     <div class="content">
                         <button class="js-close close js-main-focus">
-                            <img src="ui/close.svg">
+                            <img class="icon is-default" src="ui/close.svg">
+                            <span class="icon is-xbox">Y</span>
                         </button>
                         <div class="title">You found all the eggs!</div>
                         <p class="text">Congratulations! You found all the eggs and it only took you <strong class="js-time">XXX minutes XXX seconds</strong></p>
@@ -84,14 +85,15 @@
             </div>
 
             <!-- Intro -->
-            <div class="js-modal modal intro is-preopen" data-name="intro" data-default>
+            <div class="js-modal modal intro" data-name="intro">
                 <div class="container">
                     <div class="preview">
                         <img class="background" src="ui/intro/preview.png">
                     </div>
                     <div class="content">
                         <button class="js-close close js-main-focus">
-                            <img src="ui/close.svg">
+                            <img class="icon is-default" src="ui/close.svg">
+                            <span class="icon is-xbox">Y</span>
                         </button>
                         <div class="title">Bruno's <span class="text-faded">(beta)</span></div>
                         <p class="text">This is an <strong>unfinished</strong> version of my portfolio:</p>
@@ -117,29 +119,132 @@
             </div>
 
             <!-- Controls -->
-            <div class="js-modal modal controls" data-name="controls">
+            <div class="js-modal modal controls" data-name="controls" data-preopen>
                 <div class="container">
                     <div class="preview">
                         <img class="background" src="ui/controls/preview.png">
                     </div>
                     <div class="content">
                         <button class="js-close close js-main-focus">
-                            <img src="ui/close.svg">
+                            <img class="icon is-default" src="ui/close.svg">
+                            <span class="icon is-xbox">Y</span>
                         </button>
-                        <div class="title">Controls</div>
-                        <p class="text text-small">
-                            - <strong>WASD</strong> or <strong>ARROWS</strong> to move around<br />
-                            - <strong>SHIFT</strong> to boost<br />
-                            - <strong>B</strong> to brake<br />
-                            - <strong>SPACE</strong> to jump<br />
-                            - <strong>ENTER</strong> to interact<br />
-                            - <strong>T</strong> to post a whisper<br />
-                            - <strong>R</strong> to respawn<br />
-                            - <strong>NUMPAD</strong> to activate hydraulics<br />
-                        </p>
-                        <p class="text text-faded">
-                            Future versions will have controller and touch support.
-                        </p>
+                        <div class="tabs js-tabs">
+                            <div class="tabs-navigation js-tabs-navigation">
+                                <button class="tab js-tabs-navigation-item" data-tabs-name="mouse-keyboard">
+                                    <div class="active-background"></div>
+                                    <span class="icon-container">
+                                        <span class="icon icon-mouse-keyboard"></span>
+                                    </span>
+                                    <span class="label">Mouse Keyboard</span>
+                                </button>
+                                <button class="tab js-tabs-navigation-item" data-tabs-name="touch">
+                                    <div class="active-background"></div>
+                                    <span class="icon-container">
+                                        <span class="icon icon-touch"></span>
+                                    </span>
+                                    <span class="label">Mobile Tablet</span>
+                                </button>
+                                <button class="tab js-tabs-navigation-item" data-tabs-name="gamepad">
+                                    <div class="active-background"></div>
+                                    <span class="icon-container">
+                                        <span class="icon icon-gamepad"></span>
+                                    </span>
+                                    <span class="label">Gamepad</span>
+                                </button>
+                            </div>
+                            <div class="text text-small tabs-content js-tabs-content">
+
+                                <!-- Mouse / Keyboard -->
+                                <div class="tabs-content-item mouse-keyboard js-tabs-content-item" data-tabs-name="mouse-keyboard" data-tabs-default>
+                                    <div class="list js-tabs-content-inner">
+                                        <div class="column">
+                                            <div class="list-item"><strong>WASD</strong> / <strong>ARROWS</strong></div>
+                                            <div class="list-item"><strong>SHIFT</strong></div>
+                                            <div class="list-item"><strong>B</strong></div>
+                                            <div class="list-item"><strong>SPACE</strong></div>
+                                            <div class="list-item"><strong>ENTER</strong></div>
+                                            <div class="list-item"><strong>T</strong></div>
+                                            <div class="list-item"><strong>R</strong></div>
+                                            <div class="list-item"><strong>NUMPAD</strong></div>
+                                            <div class="list-item"><strong>LEFT CLICK (DRAG)</strong></div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="list-item">Move around</div>
+                                            <div class="list-item">Boost</div>
+                                            <div class="list-item">Brake</div>
+                                            <div class="list-item">Jump</div>
+                                            <div class="list-item">Interact</div>
+                                            <div class="list-item">Post a whisper</div>
+                                            <div class="list-item">Respawn</div>
+                                            <div class="list-item">Activate hydraulics</div>
+                                            <div class="list-item">Move camera</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Mobile / Tablet -->
+                                <div class="tabs-content-item touch js-tabs-content-item" data-tabs-name="touch">
+                                    <div class="list js-tabs-content-inner">
+                                        <div class="column">
+                                            <div class="list-item"><strong>One finger</strong></div>
+                                            <div class="list-item"><strong>Two fingers</strong></div>
+                                            <div class="list-item"><strong>Tap (on the car)</strong></div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="list-item">Move the car</div>
+                                            <div class="list-item">Move camera / zoom</div>
+                                            <div class="list-item">Jump</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Gamepad -->
+                                <div class="tabs-content-item gamepad js-tabs-content-item" data-tabs-name="gamepad">
+                                    <div class="list js-tabs-content-inner">
+                                        <div class="column">
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>B</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>Y</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>X</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>A</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>LT</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>RT</strong></div>
+                                            <div class="list-item is-gamepad-button is-xbox"><strong>LB / RB</strong></div>
+
+                                            <div class="list-item is-gamepad-button is-playstation"> <span class="gamepad-button circle"></span></div>
+                                            <div class="list-item is-gamepad-button is-playstation"> <span class="gamepad-button triangle"></span></div>
+                                            <div class="list-item is-gamepad-button is-playstation"> <span class="gamepad-button square"></span></div>
+                                            <div class="list-item is-gamepad-button is-playstation"> <span class="gamepad-button cross"></span></div>
+                                            <div class="list-item is-gamepad-button is-playstation"><strong>L2</strong></div>
+                                            <div class="list-item is-gamepad-button is-playstation"><strong>R2</strong></div>
+                                            <div class="list-item is-gamepad-button is-playstation"><strong>L1 / R1</strong></div>
+
+                                            <div class="list-item"><strong>Joystick Left</strong></div>
+                                            <div class="list-item"><strong>Joystick Right</strong></div>
+                                            <div class="list-item"><strong>Joystick Right (press)</strong></div>
+                                            <div class="list-item"><strong>Select</strong></div>
+                                            <div class="list-item"><strong>Start</strong></div>
+                                        </div>
+                                        <div class="column">
+                                            <div class="list-item">Boost</div>
+                                            <div class="list-item">Jump</div>
+                                            <div class="list-item">Brake</div>
+                                            <div class="list-item">Exit</div>
+                                            <div class="list-item">Accelerate</div>
+                                            <div class="list-item">Backward accelerate</div>
+                                            <div class="list-item">Hydraulics</div>
+                                            <div class="list-item">Turn wheels</div>
+                                            <div class="list-item">Move camera</div>
+                                            <div class="list-item">Zoom in/out</div>
+                                            <div class="list-item">Reset</div>
+                                            <div class="list-item">Pause</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -153,7 +258,8 @@
                     </div>
                     <div class="content">
                         <button class="js-close close">
-                            <img src="ui/close.svg">
+                            <img class="icon is-default" src="ui/close.svg">
+                            <span class="icon is-xbox">Y</span>
                         </button>
                         <div class="title">Leave a whisper</div>
                         <p class="text">Whispers are messages left by visitors.</p>
