:lipstick: Controls > Improve keyboard icon

--- a/sources/index.html
+++ b/sources/index.html
@@ -135,7 +135,7 @@
             <div class="js-modal modal behindTheScene is-double" data-name="behindTheScene"> <!-- data-preopen -->
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/behindTheScene/preview.png" loading="lazy">
+                        <img class="background" src="ui/previews/behindTheScene.png" loading="lazy">
                     </div>
                     <div class="content">
                         <button class="js-close close">
@@ -164,7 +164,7 @@
             <div class="js-modal modal intro is-double" data-name="intro"> <!-- data-preopen -->
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/intro/preview.png" loading="lazy">
+                        <img class="background" src="ui/previews/intro.png" loading="lazy">
                     </div>
                     <div class="content">
                         <button class="js-close close">
@@ -198,7 +198,7 @@
             <div class="js-modal modal controls is-double" data-name="controls">
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/controls/preview.png" loading="lazy">
+                        <img class="background" src="ui/previews/controls.png" loading="lazy">
                     </div>
                     <div class="content">
                         <button class="js-close close">
@@ -334,7 +334,7 @@
             <div class="js-modal modal whispers is-double" data-name="whispers">
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/whispers/preview.png" loading="lazy">
+                        <img class="background" src="ui/previews/whispers.png" loading="lazy">
                         <div class="js-preview-message message title"> <span class="js-text text" contenteditable="">Your message here</span><div class="js-flag flag"></div> </div>
                     </div>
                     <div class="content">
@@ -398,7 +398,7 @@
             <div class="js-modal modal circuit is-double" data-name="circuit">
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/circuit/preview.png" loading="lazy">
+                        <img class="background" src="ui/previews/circuit.png" loading="lazy">
                     </div>
                     <div class="content">
                         <div class="title">Circuit</div>
