:sparkles: Player > Controls > Add CTRL LEFT to brake

--- a/sources/index.html
+++ b/sources/index.html
@@ -330,7 +330,7 @@
                                                             <td>Boost</td>
                                                         </tr>
                                                         <tr>
-                                                            <td><span class="key">B</span></td>
+                                                            <td><span class="key">CTRL LEFT</span> or <span class="key">B</span></td>
                                                             <td>Brake</td>
                                                         </tr>
                                                         <tr>
