--- a/sources/index.html
+++ b/sources/index.html
@@ -679,7 +679,7 @@
                                 <div class="title">Behind the scene</div>
                                 <p class="text">
                                     Thank you for visiting my portfolio!
-                                    <br />If you are curious about the stack and how I built it, here’s everything you need to know.
+                                    <br />If you are curious about the stack and how I built this project, here’s everything you need to know.
                                 </p>
                                 
                                 <h2 class="title">Three.js</h2>
@@ -700,7 +700,7 @@
                                     <br />Even though the portfolio is out, I’m still working on the last videos so that the series is complete.
                                 </p>
                                 
-                                <h2 class="title">Code source</h2>
+                                <h2 class="title">Source code</h2>
                                 <p class="text">
                                     The code is available on <a href="https://github.com/brunosimon/folio-2025" target="_blank" rel="noreferrer">GitHub</a> under <a href="https://choosealicense.com/licenses/mit/" target="_blank" rel="noreferrer">MIT license</a>. Even the Blender files are there, so have fun!
                                     <br />For security reasons, I’m not sharing the server code, but the portfolio works without it.
